Updated MQTT page on the web interface

--- a/Subsystems/Interface/WebInterface/Main/index.html
+++ b/Subsystems/Interface/WebInterface/Main/index.html
@@ -16,7 +16,7 @@
 <div class="container">
   <div class="box">
     <h2 class="name">MQTT</h2>
-    <a href="../Glowy Text Button from Departures/index.html" class="buy">MQTT</a>
+    <a href="..\RobotController/index.html" class="buy">MQTT</a>
     <img class="product" src="mqtt.png"/>
   </div>
   <div class="box">
