--- a/Subsystems/Interface/WebInterface/WebInterface.html
+++ b/Subsystems/Interface/WebInterface/WebInterface.html
@@ -29,6 +29,6 @@
   </div>
   <!-- Reference to publish the data using mqtt -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mqtt/4.2.7/mqtt.min.js"></script>
-  <script src="../InterfaceController/WebPublisher.js"></script>
+  <script src="D:\Projects\projects\Limit\Subsystems\Interface\InterfaceController\WebPublisher.js"></script>
 </body>
 </html>
