grpc Web page updated

--- a/Subsystems/Interface/Main/index.html
+++ b/Subsystems/Interface/Main/index.html
@@ -16,17 +16,17 @@
 <div class="container">
   <div class="box">
     <h2 class="name">MQTT</h2>
-    <a href="..\RobotController/index.html" class="buy">MQTT</a>
+    <a href="..\mqttpage/index.html" class="buy">MQTT</a>
     <img class="product" src="mqtt.png"/>
   </div>
   <div class="box">
     <h2 class="name">ROS2</h2>
-    <a href="https://codepen.io/krautgti" class="buy">ROS2</a>
+    <a href="..\ros2page/index.html" class="buy">ROS2</a>
     <img class="product" src="ros22.png"/>
   </div>
   <div class="box">
     <h2 class="name">gRPC</h2>
-    <a href="https://codepen.io/krautgti" class="buy">gRPC</a>
+    <a href="..\grpcpage/index.html" class="buy">gRPC</a>
     <img class="product" src="grpc.png"/>
   </div>
 <script src="https://assets.codepen.io/7773162/vanilla-tilt.min.js"></script>
