Updated the reference to the grpc controller

--- a/Subsystems/Interface/grpcpage/index.html
+++ b/Subsystems/Interface/grpcpage/index.html
@@ -9,7 +9,7 @@
 </head>
 
 </head>
-<script src="http://0.0.0.0:8000/Subsystems/Interface/grpcpage/SendActiontoPy.js"></script>
+<script src="/SendActiontoPy.js"></script>
 <body>
 
     <div class="startcontainer">    
