Testing different destination urls

--- a/Subsystems/Interface/grpcpage/index.html
+++ b/Subsystems/Interface/grpcpage/index.html
@@ -9,7 +9,7 @@
 </head>
 
 </head>
-<script src="/SendActiontoPy.js"></script>
+<script src="./SendActiontoPy.js"></script>
 <body>
 
     <div class="startcontainer">    
@@ -63,6 +63,6 @@
         <div id='circlecontainer' class="circle"></div> 
 
     </div>    
-    <script src="http://0.0.0.0:8000/Subsystems/Interface/grpcpage/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
